--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -237,4 +237,5 @@ config TARGET_PROJECT_K7_CAMERA
         bool "Target Projet K7 CAMERA"
         default n
 
+source "drivers/kernelsu/Kconfig"
 endmenu
